--- a/app/assuntos/templates/assuntos/history_assunto.html
+++ b/app/assuntos/templates/assuntos/history_assunto.html
@@ -277,4 +277,8 @@
 
   </div>
 </div>
+<div class="mt-3">
+    <a href="{{ url_for('dashboard.dashboard') }}" class="btn btn-secondary">Voltar</a>
+  </div>
+</div>
 {% endblock %}
