--- a/app/clientes/templates/clientes/historico.html
+++ b/app/clientes/templates/clientes/historico.html
@@ -186,4 +186,8 @@
   </section>
 
 </div>
+<div class="mt-3">
+    <a href="{{ url_for('client.clientes') }}" class="btn btn-secondary">Voltar</a>
+  </div>
+</div>
 {% endblock %}
