--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -122,7 +122,7 @@
               {% if current_user.profile_image %}
                 <li class="nav-item">
                   <a class="nav-link p-0" href="{{ url_for('auth.profile') }}">
-                    <img src="{{ current_user.profile_image }}"
+                    <img src="{{ url_for('static', filename=current_user.profile_image) }}"
                          alt="Avatar"
                          class="rounded-circle border border-light img-fluid"
                          style="width:32px; height:32px; object-fit:cover;">
